...

        <Space
            android:layout_width="match_parent"
            android:layout_height="33dp" />

        <Button
            android:id="@+id/return_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_button"
            android:text="@string/return_home_button"
            android:textAllCaps="false"
...
